<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        tools:context=".ui.breed.MainActivity">

    <TextView
            android:id="@+id/title_detail"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/Title"/>

    <ImageView
            android:id="@+id/image"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/title_detail"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>

    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@id/image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
                android:id="@+id/detail_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
               >

            <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:textColor="@color/colorPrimary"
                    android:gravity="center"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp">

                <TextView
                        style="@style/DetailItem"
                        android:layout_width="160dp"
                        android:layout_height="match_parent"
                        android:text="@string/field_origin"/>

                <TextView
                        style="@style/DetailItemValue"
                        android:id="@+id/tv_origin"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp">

                <TextView
                        style="@style/DetailItem"
                        android:layout_width="160dp"
                        android:layout_height="match_parent"
                        android:text="@string/field_life_span"/>

                <TextView
                        style="@style/DetailItemValue"
                        android:id="@+id/tv_life_span"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp">

                <TextView
                        style="@style/DetailItem"
                        android:layout_width="160dp"
                        android:layout_height="match_parent"
                        android:text="@string/field_temperament"/>

                <TextView
                        style="@style/DetailItemValue"
                        android:id="@+id/tv_temperament"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp">

                <TextView
                        style="@style/DetailItem"
                        android:layout_width="160dp"
                        android:layout_height="match_parent"
                        android:text="@string/field_weight"/>

                <TextView
                        style="@style/DetailItemValue"
                        android:id="@+id/tv_weight"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp">

                <TextView
                        style="@style/DetailItem"
                        android:layout_width="160dp"
                        android:layout_height="match_parent"
                        android:text="@string/field_hairless"/>

                <TextView
                        style="@style/DetailItemValue"
                        android:id="@+id/tv_hairless"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp">

                <TextView
                        style="@style/DetailItem"
                        android:layout_width="160dp"
                        android:layout_height="match_parent"
                        android:text="@string/field_health_issues"/>

                <TextView
                        style="@style/DetailItemValue"
                        android:id="@+id/tv_health_issues"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp">

                <TextView
                        style="@style/DetailItem"
                        android:layout_width="160dp"
                        android:layout_height="match_parent"
                        android:text="@string/field_hypoallergenic"/>

                <TextView
                        style="@style/DetailItemValue"
                        android:id="@+id/tv_hypoallergenic"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp">

                <TextView
                        style="@style/DetailItem"
                        android:layout_width="160dp"
                        android:layout_height="match_parent"
                        android:text="@string/field_rare"/>

                <TextView
                        style="@style/DetailItemValue"
                        android:id="@+id/tv_rare"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp">

                <TextView
                        style="@style/DetailItem"
                        android:layout_width="160dp"
                        android:layout_height="match_parent"
                        android:text="@string/field_wikipedia"/>

                <TextView
                        style="@style/DetailItemValue"
                        android:id="@+id/tv_wikipedia"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp">

                <TextView
                        style="@style/DetailItem"
                        android:layout_width="160dp"
                        android:layout_height="match_parent"
                        android:text="@string/field_adaptability"/>

                <RatingBar
                        style="?android:attr/ratingBarStyleSmall"
                        android:id="@+id/rb_adaptability"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp">

                <TextView
                        style="@style/DetailItem"
                        android:layout_width="160dp"
                        android:layout_height="match_parent"
                        android:text="@string/field_affection_level"/>

                <RatingBar
                        style="?android:attr/ratingBarStyleSmall"
                        android:id="@+id/rb_affection_level"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp">

                <TextView
                        style="@style/DetailItem"
                        android:layout_width="160dp"
                        android:layout_height="match_parent"
                        android:text="@string/field_child_friendly"/>

                <RatingBar
                        style="?android:attr/ratingBarStyleSmall"
                        android:id="@+id/rb_child_friendly"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp">

                <TextView
                        style="@style/DetailItem"
                        android:layout_width="160dp"
                        android:layout_height="match_parent"
                        android:text="@string/field_dog_friendly"/>

                <RatingBar
                        style="?android:attr/ratingBarStyleSmall"
                        android:id="@+id/rb_dog_friendly"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp">

                <TextView
                        style="@style/DetailItem"
                        android:layout_width="160dp"
                        android:layout_height="match_parent"
                        android:text="@string/field_energy_level"/>

                <RatingBar
                        style="?android:attr/ratingBarStyleSmall"
                        android:id="@+id/rb_energy_level"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/white"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp">

                <TextView
                        style="@style/DetailItem"
                        android:layout_width="160dp"
                        android:layout_height="match_parent"
                        android:text="@string/field_grooming"/>

                <RatingBar
                        style="?android:attr/ratingBarStyleSmall"
                        android:id="@+id/rb_grooming"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp">

                <TextView
                        style="@style/DetailItem"
                        android:layout_width="160dp"
                        android:layout_height="match_parent"
                        android:text="@string/field_intelligence"/>

                <RatingBar
                        style="?android:attr/ratingBarStyleSmall"
                        android:id="@+id/rb_intelligence"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp">

                <TextView
                        style="@style/DetailItem"
                        android:layout_width="160dp"
                        android:layout_height="match_parent"
                        android:text="@string/field_shedding_level"/>

                <RatingBar
                        style="?android:attr/ratingBarStyleSmall"
                        android:id="@+id/rb_shedding_level"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp">

                <TextView
                        style="@style/DetailItem"
                        android:layout_width="160dp"
                        android:layout_height="match_parent"
                        android:text="@string/field_social_needs"/>

                <RatingBar
                        style="?android:attr/ratingBarStyleSmall"
                        android:id="@+id/rb_social_needs"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp">

                <TextView
                        style="@style/DetailItem"
                        android:layout_width="160dp"
                        android:layout_height="match_parent"
                        android:text="@string/field_stranger_friendly"/>

                <RatingBar
                        style="?android:attr/ratingBarStyleSmall"
                        android:id="@+id/rb_stranger_friendly"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>